--- a/configuration.properties
+++ b/configuration.properties
@@ -2,8 +2,29 @@
 
 
 #Amazon Regression Example
-
 browser=chrome
-
 amazon_url=https://www.amazon.com.tr
+test_environment=regression
+username=hasan
+password=12345
+
+#Open Source DATA
+open_source_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+open_source_url1=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+open_source_username=Admin
+open_source_password=admin123
+
+#GeeksforGeeks
+geeks_url=https://auth.geeksforgeeks.org/
+geeks_username=xyz@gmail.com
+geeks_password=xyz12345
+
+#Heroku
+heroku_url=https://the-internet.herokuapp.com/login
+heroku_username=tomsmith
+heroku_password=SuperSecretPassword!
+
+
+
+
 
