--- a/configuration.properties
+++ b/configuration.properties
@@ -24,6 +24,17 @@ heroku_url=https://the-internet.herokuapp.com/login
 heroku_username=tomsmith
 heroku_password=SuperSecretPassword!
 
+#BLUE RENTAL CAR DATA
+app_url=https://www.bluerentalcars.com/
+admin_email=btj123@gmail.com
+admin_sifre=123456
+
+
+fake_email=fake@bluerentalcars.com
+fake_pass=fakepass
+
+
+
 
 
 
